tests/vertical-slice/accept/directory_module_call.hew
import greeting;

fn main() -> i64 {
    greeting.hello() + greeting.world()
}
