tests/vertical-slice/reject/unicode_rune_len_wrong_type.hew
import std::text::unicode;

fn bad() -> i64 {
    unicode.rune_len("A")
}
